fix(develop): remove scrollbars windows/chrome

--- a/src/app/modules/flow/flow.component.scss
+++ b/src/app/modules/flow/flow.component.scss
@@ -35,6 +35,10 @@ router-outlet {
     justify-content: space-around;
     overflow-x: hidden;
     overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
 
