--- a/src/app/modules/flow/steps/text/flow-text.component.scss
+++ b/src/app/modules/flow/steps/text/flow-text.component.scss
@@ -1,6 +1,10 @@
 :host {
   text-align: center;
 
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   .appointment-time {
     display: flex;
     flex-direction: column;
